feat: revamp about page

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.1.17",
     "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.4.2",
+    "@mui/lab": "^5.0.0-alpha.70",
     "@mui/material": "^5.4.3",
     "canvas-particle-network": "^1.5.0",
     "gatsby": "^4.8.0",
@@ -26,10 +27,13 @@
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^4.8.0",
     "gatsby-transformer-sharp": "^4.8.0",
+    "material-ui-popup-state": "^2.0.0",
     "prop-types": "^15.8.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-spotify-api": "^3.0.0",
+    "react-type-animation": "^1.1.2"
   },
   "devDependencies": {
     "prettier": "^2.5.1",
