--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.4.2",
     "@mui/lab": "^5.0.0-alpha.70",
     "@mui/material": "^5.4.3",
+    "axios": "^0.26.1",
     "canvas-particle-network": "^1.5.0",
     "gatsby": "^4.8.0",
     "gatsby-plugin-gatsby-cloud": "^4.8.0",
