--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.29.4",
+    "gh-pages": "^5.0.0",
     "prettier": "2.6.2",
     "typescript": "^4.6.3"
   },
